--- a/app/views/matches/_list_matches.html.erb
+++ b/app/views/matches/_list_matches.html.erb
@@ -1,6 +1,5 @@
-<p>yo mama</p>
-
 <ul>
+  <%= @matches.length %>
   <% @matches.each do |match| %>
     <li><%= match.players[0].name %> vs. <%= match.players[1].name %></li>
   <% end %>
