--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,5 @@
 <h1>games#show</h1>
 
-<%= @game %>
 <p><%= @player1_name %> vs. <%= @player2_name %></p>
+<p><%= @game.team_1_score %></p>
+<p><%= @game.team_2_score %></p>
