--- a/app/views/matches/_list_matches.html.erb
+++ b/app/views/matches/_list_matches.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @matches.each do |match| %>
-    <li><%= match.players[0].name %> vs. <%= match.players[1].name %></li>
+    <li class="match"><%= match.players[0].name %> vs. <%= match.players[1].name %></li>
   <% end %>
 </ul>
