--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,23 +12,88 @@
  *= require_tree .
  */
 
+html {
+  background: #222222;
+}
+
 #content_container {
   margin: auto;
   width: 80%;
-  background: #999;
+  background: #cccccc;
   padding: 10px;
   text-align: center;
+
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -o-border-radius: 20px;
+  border-radius: 20px;
+
+  -moz-box-shadow: 1px 1px 8px black;
+  -webkit-box-shadow: 1px 1px 8px black;
+  -o-box-shadow: 1px 1px 8px black;
+  box-shadow: 1px 1px 8px black;
 }
 
 .match {
   margin: 10px auto;
   width: 90%;
-  background: #777;
+  background: #999999;
   height: 2em;
+  padding: .5em;
   text-align: center;
+
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -o-border-radius: 8px;
+  border-radius: 8px;
+
+  -moz-box-shadow: 1px 1px 8px black;
+  -webkit-box-shadow: 1px 1px 8px black;
+  -o-box-shadow: 1px 1px 8px black;
+  box-shadow: 1px 1px 8px black;
 }
 
 .page_title {
   margin: 10px auto;
   text-align: center;
+  width: 40%;
+  background: #cccccc;
+  color: #000000;
+
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -o-border-radius: 6px;
+  border-radius: 6px;
+
+  -moz-box-shadow: 1px 1px 8px black;
+  -webkit-box-shadow: 1px 1px 8px black;
+  -o-box-shadow: 1px 1px 8px black;
+  box-shadow: 1px 1px 8px black;
+}
+
+.button_link {
+  padding: 0.4em;
+  margin: 1em;
+  background: #000000;
+  color: #eee;
+
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -o-border-radius: 6px;
+  border-radius: 6px;
+
+  -moz-box-shadow: 1px 1px 8px black;
+  -webkit-box-shadow: 1px 1px 8px black;
+  -o-box-shadow: 1px 1px 8px black;
+  box-shadow: 1px 1px 8px black;
+}
+
+.player_names {
+  text-align: center;
+  width: 40%;
+  float: left;
+}
+
+table {
+  margin: 0 auto;
 }
