--- a/app/views/matches/_match_buttons.html.erb
+++ b/app/views/matches/_match_buttons.html.erb
@@ -1,5 +1,5 @@
 
 <%= link_to "Show match", match_path(match), {:class => 'button_link'} %>
-<%= link_to "Start match", match_path(match), {:class => 'button_link', :method => :start} %>
-<%= link_to "Update scores", edit_match_path(match), { :class => 'button_link' } %>
+<%= link_to "Start match", matches_start_path(match), {:class => 'button_link', :method => :start} %>
+<%= link_to "Update scores", edit_match_path(match), {:class => 'button_link'} %>
 <%= link_to "Delete match", match_path(match), {:class => 'button_link', :method => :delete} %>
