Show all four player names

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -2,9 +2,9 @@
 
 <table>
   <tr>
-    <td>Game</td>
-    <td>Player 1</td>
-    <td>Player 2</td>
+    <td></td>
+    <td><%= @team_1_names %></td>
+    <td><%= @team_2_names %></td>
   </tr>
   <% @match.games.each_with_index do |game, index| %>
     <tr>
