--- a/app/views/matches/_list_matches.html.erb
+++ b/app/views/matches/_list_matches.html.erb
@@ -1,7 +1,7 @@
 <ul>
   <% @matches.each do |match| %>
     <li><div class="match">
-      <span class="player_names"><%= match.players[0].name %> vs. <%= match.players[1].name %></span>
+      <span class="player_names"><%= render "team_names", :team => match.teams.first %> vs. <%= render "team_names", :team => match.teams.last %></span>
       <span class="match_buttons"><%= render "match_buttons", :match => match %></span>
     </div></li>
   <% end %>
