--- a/app/views/matches/in_progress.html.erb
+++ b/app/views/matches/in_progress.html.erb
@@ -1,11 +1,8 @@
-<p><%= @in_progress.players[0].name %> vs. <%= @in_progress.players[1].name %></p>
+<span><%= render "team_names", :team => @in_progress.teams.first %></span>
+<span> vs. </span>
+<span><%= render "team_names", :team => @in_progress.teams.last %></span>
 
 <table>
-  <tr>
-    <td>Game</td>
-    <td>Player 1</td>
-    <td>Player 2</td>
-  </tr>
   <% @in_progress.games.each_with_index do |game, index| %>
     <tr>
       <td>Game <%= index + 1 %></td>
