Add id for winning team

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -14,5 +14,6 @@
   <% end %>
 </table>
 
-
-<p>winner: <%= @winner %></p>
+<% if @winning_team %>
+  <p>winner: <%= render "team_names", :team => @winning_team %></p>
+<% end %>
