--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 
     <h2 class="page_title"><%= @page_title %></h2>
 
+    <div id="navbar">
+      <%= render "layouts/navbar" %>
+    </div>
     <div id="content_container">
       <%= yield %>
     </div>
