--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -3,8 +3,8 @@
   <table>
     <tr>
       <td>Game #</td>
-      <td>Player 1 score</td>
-      <td>Player 2 score</td>
+      <td>Team 1 score</td>
+      <td>Team 2 score</td>
     </tr>
 
     <tr>
