--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,16 +1,3 @@
 
-<%= render "match_names", :match => @match %>
-
-<table>
-  <% @match.games.each_with_index do |game, index| %>
-    <tr>
-      <td>Game <%= index + 1 %></td>
-      <td><%= game.team_1_score %></td>
-      <td><%= game.team_2_score %></td>
-    </tr>
-  <% end %>
-</table>
-
-<% if @winning_team %>
-  <p>winner: <%= render "team_names", :team => @winning_team %></p>
-<% end %>
+<%= render "single_match", :match => @match,
+                           :winning_team => @winning_team %>
