--- a/app/views/matches/finished.html.erb
+++ b/app/views/matches/finished.html.erb
@@ -1,12 +1,13 @@
 <ul>
-  <% @matches.each do |match| %>
-    <li><div class="match">
-      <span class="player_names">
-        <%= render "match_names", :match => match %>
-      </span>
+  <% @matches.reverse.each do |match| %>
+    <li>
+    <div class="match">
+      <span class="completed_at"><%= match.completed_at %></span>
+      <%= render "single_match", :match => match %>
       <%= link_to "Show match", match_path(match), {:class => 'button_link'} %>
       <%= link_to "Delete match", match_path(match), {:class => 'button_link', :method => :delete} %>
-    </div></li>
+    </div>
+    </li>
   <% end %>
 </ul>
 
