Fix bug when no match is in_progress

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <body>
 
     <h2 class="page_title"><%= @page_title %></h2>
+    <div id="flash_message"><%= @flash %></div>
 
     <div id="navbar">
       <%= render "layouts/navbar" %>
