--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   <body>
 
     <h2 class="page_title"><%= @page_title %></h2>
-    <div id="flash_message"><%= @flash %></div>
+    <% if flash[:notice] %>
+      <div id="flash_message"><%= flash[:notice] %></div>
+    <% end %>
 
     <div id="navbar">
       <%= render "layouts/navbar" %>
