--- a/app/views/matches/_single_match.html.erb
+++ b/app/views/matches/_single_match.html.erb
@@ -1,6 +1,6 @@
 <%= render "match_names", :match => match %>
 
-<table>
+<table class="scores_table">
   <% match.games.each_with_index do |game, index| %>
     <tr>
       <td>Game <%= index + 1 %></td>
