--- a/app/views/matches/finished.html.erb
+++ b/app/views/matches/finished.html.erb
@@ -2,7 +2,7 @@
   <% @matches.reverse.each do |match| %>
     <li>
     <div class="match">
-      <span class="completed_at"><%= match.completed_at %></span>
+      <span class="completed_at"><%= match.completed_at.strftime "%b %e" %><br /><%= match.completed_at.strftime "%l:%M" %></span>
       <%= render "single_match", :match => match %>
       <%= link_to "Show match", match_path(match), {:class => 'button_link'} %>
       <%= link_to "Delete match", match_path(match), {:class => 'button_link', :method => :delete} %>
