--- a/app/views/matches/_match_names.html.erb
+++ b/app/views/matches/_match_names.html.erb
@@ -1,7 +1,7 @@
-<span class="team_1">
+<div class="team_1">
   <%= render "team_names", :team => match.teams.first %>
-</span>
+</div>
 vs. 
-<span class="team_2">
+<div class="team_2">
   <%= render "team_names", :team => match.teams.last %>
-</span>
+</div>
