Fix broken tests

--- a/app/views/matches/_single_match.html.erb
+++ b/app/views/matches/_single_match.html.erb
@@ -21,7 +21,7 @@
 </table>
 
 <div>
-  <% if match.completed %>
+  <% if match.completed and match.winner %>
     <p>winner: <%= render "team_names", :team => Team.find(match.winner) %></p>
   <% end %>
 </div>
